# CloudComputingLabs

./: Makefile  README.md  main.cc  sudoku
Lab1/: Lab1-test-report.md  Makefile  README  README.md  main.cc  neighbor.cc  output.txt  output100.txt  output1000.txt  output_correct.txt  sudoku  sudoku.h  sudoku_basic.cc  sudoku_dancing_links.cc  sudoku_solve  test1000
Lab1/src/Sudoku/: Makefile  main.cc  neighbor.cc  sudoku  sudoku_min_arity_cache.cc
Lab2/: Lab 2 Test Report.md  Makefile  README.md  client  client_get.c  httpserver  server.c  simpleclient.c
Lab2/htdocs/: index.html  post_show  post_show.cgi
Lab2/server/: client  httpserver  server.c  simpleclient.c
Lab2/test report/: Lab 2 Test Report.md
Lab3/: README.md
Lab3/project1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conf.cpp  coordinator.conf  coordinator.cpp  coordinator.h  encode_decode.cpp  kv.cpp  main.cpp  myLog.cpp  network.cpp  participant.cpp  participant.h  participant1.conf  participant2.conf  participant3.conf
Lab3/project1/include/: conf.h  encode_decode.h  headSet.h  kv.h  lock.h  myLog.h  network.h  util.h
Lab4/: README.md
